[gd_scene load_steps=4 format=3 uid="uid://bdfdpm6ggi8jx"]

[ext_resource type="Script" path="res://creditos.gd" id="1_idsj3"]
[ext_resource type="FontFile" uid="uid://bxv7ewrcpy8ab" path="res://assets/Kenney Bold.ttf" id="2_sv35r"]
[ext_resource type="AudioStream" uid="uid://d0nyd0bgccblh" path="res://assets/AudiosLevels/CreditosSong.mp3" id="3_jrr5p"]

[node name="Creditos" type="Control"]
process_priority = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idsj3")

[node name="LabelTitulo" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -239.0
offset_top = 19.0
offset_right = 241.0
offset_bottom = 107.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_sv35r")
theme_override_font_sizes/font_size = 33
text = "Creditos"
horizontal_alignment = 1

[node name="LabelVersion" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -437.0
offset_top = 698.0
offset_right = 43.0
offset_bottom = 803.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_sv35r")
theme_override_font_sizes/font_size = 10
text = "Alpha 0.1"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = 310.0
offset_right = 241.0
offset_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.776471, 0.156863, 0.156863, 1)
theme_override_fonts/font = ExtResource("2_sv35r")
theme_override_font_sizes/font_size = 25
text = "Volver"
flat = true

[node name="CreadorLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_top = 121.0
offset_right = 239.0
offset_bottom = 185.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_sv35r")
theme_override_font_sizes/font_size = 20
text = "Creador: 
"
horizontal_alignment = 1

[node name="CREADOR" type="Label" parent="CreadorLabel"]
layout_mode = 0
offset_top = 34.0
offset_right = 472.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 25
text = "SubaruDev"
horizontal_alignment = 1

[node name="ArteLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_top = 209.0
offset_right = 239.0
offset_bottom = 306.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_sv35r")
theme_override_font_sizes/font_size = 20
text = "Arte:


"
horizontal_alignment = 1

[node name="Arte1" type="Button" parent="ArteLabel"]
layout_mode = 0
offset_top = 30.0
offset_right = 472.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Garou DG"
flat = true

[node name="Arte2" type="Button" parent="ArteLabel"]
layout_mode = 0
offset_top = 75.0
offset_right = 472.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Shad.din"
flat = true

[node name="Arte3" type="Button" parent="ArteLabel"]
layout_mode = 0
offset_top = 117.0
offset_right = 472.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Jabo"
flat = true

[node name="ThanksLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_top = 393.0
offset_right = 239.0
offset_bottom = 490.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_sv35r")
theme_override_font_sizes/font_size = 20
text = "Agradecimientos: 


"
horizontal_alignment = 1

[node name="Thanks1" type="Label" parent="ThanksLabel"]
layout_mode = 0
offset_top = 38.0
offset_right = 472.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 25
text = "Irwin Rodriguez"
horizontal_alignment = 1

[node name="Thanks2" type="Label" parent="ThanksLabel"]
layout_mode = 0
offset_top = 72.0
offset_right = 472.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 25
text = "Mathoby"
horizontal_alignment = 1

[node name="Thanks3" type="Label" parent="ThanksLabel"]
layout_mode = 0
offset_top = 105.0
offset_right = 472.0
offset_bottom = 140.0
theme_override_font_sizes/font_size = 25
text = "Mabel"
horizontal_alignment = 1

[node name="Thanks4" type="Label" parent="ThanksLabel"]
layout_mode = 0
offset_top = 137.0
offset_right = 472.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 25
text = "Mariamongus"
horizontal_alignment = 1

[node name="SoundsButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 238.0
offset_right = 76.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("2_sv35r")
theme_override_font_sizes/font_size = 20
text = "Sonidos y Musica"
flat = true

[node name="CreditosSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jrr5p")
volume_db = -80.0

[connection signal="pressed" from="BackButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ArteLabel/Arte1" to="." method="_on_arte_1_pressed"]
[connection signal="pressed" from="ArteLabel/Arte2" to="." method="_on_arte_2_pressed"]
[connection signal="pressed" from="ArteLabel/Arte3" to="." method="_on_arte_3_pressed"]
[connection signal="pressed" from="SoundsButton" to="." method="_on_sounds_button_pressed"]
[connection signal="finished" from="CreditosSong" to="." method="_on_creditos_song_finished"]
